2003-06-17  vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/wrapper.h :
	* lib/wrapper.cpp :

	  - Cleanup.

	  - Fixed the ifdef for smodels dependent function: will now return 
	    failure if used without smodels support.

2003-06-13  vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/atom.h :
	* lib/symtab.h :
	* lib/vlad.h :

	  - Moved macros to vlad.h to allow non-c++ programs to use them.

2003-06-10  vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added C interface for kb.

2003-06-09  vino Crescini  <jcrescin@cit.uws.edu.au>

	* config.h.in :
	* configure :
	* configure.ac :

	  - Added --enable-wrapper to enable the c-style library wrapper.

	  - Added additional compiler warning checks.

	* lib/wrapper.h :
	* lib/wrapper.cpp :
	* lib/smwrap.h :
	* lib/smwrap.cpp :

	  - Renamed wrapper to smwrap.

2003-06-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :
	* lib/Makefile.in :

	  - Added a check for -fpic in case -fPIC fails.

	* lib/kb.cpp :
	* lib/kb.h :
	* main/operation.y :

	  - Separated compute() into compute_generate() and
	    compute_evaluate() also generate_nlp() and evaluate_nlp() to
	    query_generate() and query_evaluate(). This change is made to
	    allow multiple queries of the same transformation sequence to
	    share the same kb state.


2003-06-02  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/vlad.h :

	  - Now generate_nlp() outputs the queries too.

	* docs/bnf_operations.txt :
	* docs/langspecs.txt :
	* main/operation.l :
	* main/operation.y :
	* samples/cwall_operations :

	  - Added a "compute" statement into the operations language to
	    separate computation from query evaluation.

	* lib/kb.cpp :

	  - Changed inheritance rules from :

	      holds(Se, A, O) <- holds(Sg, A, O) AND memb(Se, Sg)
              holds(S, Ae, O) <- holds(S, Ag, O) AND memb(Ae, Ag)
              holds(S, A, Oe) <- holds(S, A, Og) AND memb(Oe, Og)
